package espeon.game.jade.filters;

import espeon.game.red.Entity;

public interface Filter {

	public boolean filter(Entity src, Entity target);

}
