package espeon.game.jade;

import java.util.List;

import espeon.game.red.Stats;
import espeon.game.red.Status;

public class CreatureModel {
 
    public int id;
    // public Stats stats;
    // public List<SpellModel> spells;
	public List<String> spells;
    // public List<Status> status;

}
